--- a/iSpotify/src/components/Sidebar/Sidebar.module.css
+++ b/iSpotify/src/components/Sidebar/Sidebar.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     gap: 10px;
     height: 100vh;
+    min-width: fit-content;
     width: 18%;
     background-color: black;
     font-size: 2.5rem;
