--- a/iSpotify/src/components/Tracks/Tracks.module.css
+++ b/iSpotify/src/components/Tracks/Tracks.module.css
@@ -3,14 +3,16 @@
     flex-direction: column;
     font-size: 1.8rem;
     color: #D9D9D9;
-    gap: 3rem;
+    gap: 6rem;
 }
 
-.header {
+/* .header {
     display: flex;
     justify-content: space-between;
     width: 95%;
     align-self: center;
+    position: sticky;
+    top: 0; 
 }
 
 .header p {
@@ -18,37 +20,59 @@
     color: whitesmoke;
 }
 
-.headerImg {
-    width: 2rem;
-    height: 2rem;
-}
-
 .separator {
     margin-top: -3rem;
     width: 95%;
-}
+} */
 
 .trackInfo {
-    margin-top: -3rem;
     display: flex;
     justify-content: space-between;
     width: 95%;
     align-self: center;
 }
 
-.trackSeparator {
-    border-top: 1px solid #ddd;
+
+.trackNameAndArtistAndIndex
+{
+    display: flex;
+    margin-left: 2rem;
+    gap: 1rem;
 }
 
 .trackIndex {
+    width: 20px;
+    height: 25px;
     font-size: 1.6rem;
     color: #909090;
+    line-height: 5;
 }
 
 .trackNameAndArtistName {
-    text-align: center;
+    text-align: start;
+    display: flex;
+    flex-direction: column;
+    width: 400px;   
+    height: 40px;
+    margin-top: 2rem;
+}
+
+.trackName
+{
+    margin: 0;
+}
+
+
+.artistName {
+    margin: 0; /* Remove qualquer margem padrão */
+    margin-top: 1rem; /* Ajuste o valor para a distância desejada */
 }
 
 .albumName {
-    text-align: center;
+    display: flex;
+    width: 400px;
+    height: 40px;
+    text-align: start;
+    line-height: -1rem;
+    margin-top: 1rem;
 }
