--- a/iSpotify/src/pages/ArtistTracksPage/ArtistTracksPage.module.css
+++ b/iSpotify/src/pages/ArtistTracksPage/ArtistTracksPage.module.css
@@ -14,10 +14,36 @@
 
 .tracksContainer
 {
-    border: 2px solid red;
-    width: 80%;
-    max-height: 30%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 35%;
+    align-self: flex-end;    
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    width: 95%;
+    align-self: center;
+    position: sticky;
+    top: 0; 
+}
+
+.header p {
+    font-size: 2rem;
+    color: whitesmoke;
+}
+
+.separator {
+    width: 95%;
+}
+
+.tracks
+{
+    width: 100%;        
     flex-direction: column;
     align-self: flex-end;
     overflow-y: scroll;
 }
+
